# condutorai

./: .env.example  README.md  main.py  pyproject.toml
num_extract/: ai_provider.py  numai.py  numinternal.py
numai/: README.md  ai_provider.py  config.py  numai.py  numinternal.py
numai/data/: prompt.md
numai/results/: results.json
numai/schemas/: response.py
