[project]
name = "conductorai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "camelot-py[base]>=0.11.0",
    "ghostscript>=0.7",
    "google-genai>=1.5.0",
    "google-generativeai>=0.8.4",
    "httpx>=0.28.1",
    "num2words>=0.5.14",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.5",
    "polars>=1.24.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pypdf2>=3.0.1",
    "typer>=0.15.2",
    "vertexai>=1.71.1",
]
